samples/_failures_safe/1761338267_efcaaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78149069.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_78149069.c:165:9: error: expected expression at end of input
  165 |         case
      |         ^~~~
./samples/SAFE/__tmp_78149069.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78149069.c:165:9: error: expected declaration or statement at end of input
